Update JakUruchomić.md